[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-robotics-toolbox"
version = "0.1.0"
description = "A Python library for modeling, simulation, and control of continuum robots"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bryan Zhao", email = "bzhao@wpi.edu"}
]
keywords = ["robotics", "continuum-robotics", "kinematics", "simulation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
]
viz = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/bryzhao/continuum-robotics-toolbox"
Repository = "https://github.com/bryzhao/continuum-robotics-toolbox"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
